# cvlib

./: README.md
cvbase/: CMakeLists.txt  cvbase.cmake
cvbase/cv/base/: io.cpp  io.h  utils.cpp  utils.h
cvbase/cv/base/cfg_parser/: cfg_parser.cmake  cfg_parser.cpp  cfg_parser.h
multimodal/: CMakeLists.txt
multimodal/data/: hog.cfg  homography.txt  mt.cfg  training.cfg
multimodal/examples/: capture_images.cpp  gen_mt_training_data.cpp  gen_training_data.cpp  hog.cpp
opencvjs/: CMakeLists.txt
opencvjs/examples/: opencvjs_facedetector.cpp  opencvjs_facedetector.cpp~
scripts/bash/: makeVideos.sh  padfiles.sh  zeropad.sh
scripts/cmake/: opencv.cmake  package.cmake
